Fix metadata input field width

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -993,6 +993,10 @@ Metadata Editor
     filter: opacity(35%);
 }
 
+#metadata input {
+    width: 100%;
+}
+
 /*----------------------------------------------------------------------
 Footer
 ----------------------------------------------------------------------*/
