--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/bpmn-js/bpmn-font/css/bpmn-embedded.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/bpmn-js/bpmn-font/css/bpmn-embedded.css
@@ -1,3 +1,14 @@
+/**
+* (c) Kitodo. Key to digital objects e. V. <contact@kitodo.org>
+*
+* This file is part of the Kitodo project.
+*
+* It is licensed under MIT License by camunda Services GmbH
+*
+* For the full copyright and license information, please read the
+* Camunda-License.txt file that was distributed with this source code.
+*/
+
 @font-face {
   font-family: 'bpmn';
   src: url('../font/bpmn.eot?43681877');
