--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/bpmn-js/diagram-js.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/bpmn-js/diagram-js.css
@@ -1,4 +1,15 @@
 /**
+* (c) Kitodo. Key to digital objects e. V. <contact@kitodo.org>
+*
+* This file is part of the Kitodo project.
+*
+* It is licensed under MIT License by camunda Services GmbH
+*
+* For the full copyright and license information, please read the
+* Camunda-License.txt file that was distributed with this source code.
+*/
+
+/**
  * outline styles
  */
 
