implemented authority checking on Ldap-group page

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
@@ -23,7 +23,7 @@
                  rows="#{LoginForm.myBenutzer.tableSize}"
                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                  paginatorPosition="bottom">
-        <p:column headerText="#{msgs.ldapgruppe}">
+        <p:column headerText="#{msgs.ldapgroup}">
             <h:outputText value="#{item.title}"/>
         </p:column>
         <p:column headerText="#{msgs.homeVerzeichnis}">
