--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -102,7 +102,7 @@
                             </h:panelGroup>
 
                             <h:panelGroup
-                                rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('viewAllUsers, viewAllUserGroups')}">
+                                rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('viewAllUsers, viewAllUserGroups, viewAllLdapGroups')}">
                             <li class="nav-pic-text"><h:link value="#{msgs.benutzer}" id="linkUsers" outcome="users"><i
                                 class="fa fa-user fa-lg"/></h:link></li>
                             </h:panelGroup>
