Flip expand button when area is collapsed

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -951,6 +951,10 @@ Metadata Editor
     display: none;
 }
 
+.collapsibleWrapper .columnHeadingWrapper button.collapsed {
+    transform: scaleY(-1);
+}
+
 .collapsibleWrapper.collapsed .columnHeading {
     position: absolute;
     transform: rotate(90deg);
