Rename methods / variables according to coding guideline

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
@@ -44,7 +44,7 @@
                 <div>
                     <p:commandButton id="absenden"
                                      value="#{msgs.speichern}"
-                                     action="#{LoginForm.PasswortAendernSpeichern}"
+                                     action="#{LoginForm.saveChangedPassword}"
 
                                      icon="fa fa-floppy-o fa-lg"
                                      iconPos="right"
