--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml
@@ -61,7 +61,7 @@
             </p:row>
             <p:commandButton id="submit"
                              value="#{msgs.speichern}"
-                             action="#{LoginForm.BenutzerkonfigurationSpeichern}"
+                             action="#{LoginForm.saveUserConfiguration}"
                              update="sticky-notifications"
                              icon="fa fa-floppy-o fa-lg"
                              iconPos="right"
