--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/head.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/head.xhtml
@@ -21,6 +21,7 @@
     <!-- license for raleway font is available under https://www.fontsquirrel.com/license/raleway -->
     <link href='//fonts.googleapis.com/css?family=Raleway:300,400,500'/>
     <h:outputStylesheet library="webjars" name="font-awesome/4.7.0/css/font-awesome-jsf.css"/>
+    <h:outputScript library="webjars" name="openlayers/4.5.0/ol.js" />
 
     <link rel="shortcut icon" href="#{resource['images/favicon.ico']}" type="image/x-icon" />
 
