Do not render empty datagrid

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
@@ -87,7 +87,7 @@
                 </p:dataList>
             </p:fieldset>
 
-            <p:fieldset id="unstructuredPagesField" legend="Unstructured Pages">
+            <p:fieldset id="unstructuredPagesField" legend="Unstructured Pages" rendered="#{not empty Metadaten.images}">
                 <p:dataGrid id="unstructuredPages"
                             styleClass="structureElementDataGrid"
                             var="page"
