Don't check if title field is empty when querying remote OPACs

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml
@@ -23,7 +23,8 @@
             <div>
                 <!-- process title -->
                 <p:outputLabel for="processTitle" value="#{msgs.prozessTitel}"/>
-                <p:inputText id="processTitle" value="#{ProzesskopieForm.prozessKopie.title}" styleClass="input-with-button" required="true"/>
+                <p:inputText id="processTitle" value="#{ProzesskopieForm.prozessKopie.title}" styleClass="input-with-button"
+                             required="#{empty param['editForm:processFromTemplateTabView:performOpacQuery']}"/>
                 <p:commandButton id="generateTitleButton"
                                  actionListener="#{ProzesskopieForm.calculateProcessTitle}"
                                  icon="fa fa-cog" title="#{msgs.generieren}"/>
