--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/workflowList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/workflowList.xhtml
@@ -62,7 +62,7 @@
             <h:form id="xmlDiagramSaveForm" enctype="multipart/form-data">
                 <p:outputLabel for="xmlDiagramName" value="#{msgs.titel}" />
                 <p:inputText id="xmlDiagramName" placeholder="#{msgs.titel}" class="input" value="#{ModelerForm.xmlDiagramName}"/>
-
+                <p:remoteCommand name="svgContent" actionListener="#{ModelerForm.save}" />
                 <p:remoteCommand name="xmlContent" actionListener="#{ModelerForm.save}" />
                 <p:commandButton id="btnSaveXmlDiagram" value="Save XML diagram" update="projectsTabView:xmlDiagramReadForm" />
             </h:form>
